Add suggestion text for class fields

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -791,10 +791,10 @@
                             <button class="sheet-skill-roll" type="roll" name="roll_class_ability" value="!barbs ability @{class_name};@{ability_name};@{ability_options}"></button>
                         </div>
                         <div class="sheet-col-7-24">
-                            <input type="text" name="attr_class_name"/>
+                            <input type="text" placeholder="class name" name="attr_class_name"/>
                         </div>
                         <div class="sheet-col-1-2">
-                            <input type="text" name="attr_ability_name"/>
+                            <input type="text" placeholder="ability name" name="attr_ability_name"/>
                         </div>
                         <div class="sheet-col-1-8">
                             <input type="number" class="sheet-center" name="attr_ability_tier" value="" min="1" max="4"/>
@@ -803,7 +803,7 @@
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">&nbsp;</div>
                         <div class="sheet-col-11-12">
-                            <input type="text" name="attr_ability_options"/>
+                            <input type="text" placeholder="&nbsp;&nbsp;ability parameters and options" name="attr_ability_options"/>
                         </div>
                     </div>
                 </fieldset>
