Support items and abilities that modify crit change/damage on attack rolls

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -2649,14 +2649,14 @@ Desired example
         {{#rollLess() crit_value crit_cutoff}}
         <tr style="background:#702082; color:#FFFFFF">
             <td class="template_label">Crit Roll:</td>
-            <td class="template_value">{{crit_value}}</td>
+            <td class="template_value">{{modified_crit}}</td>
         </tr>
         {{/rollLess() crit_value crit_cutoff}}
 
         {{#^rollLess() crit_value crit_cutoff}}
         <tr style="background:#702082; color:#FFFFFF; border: 3px solid #3FB315;">
             <td class="template_label">Crit Roll:</td>
-            <td class="template_value">{{crit_value}}</td>
+            <td class="template_value">{{modified_crit}}</td>
         </tr>
         {{/^rollLess() crit_value crit_cutoff}}
 
