Add a bunch of abilities
Fill out the easier abilities for a bunch of classes. Remove crit
sections from magic abilities, they can't normally crit. Add hidden
stats to rolls - things like AC shred, magic penetration - so that we
can add them up before sending them as effects. Add and handle general
magic damage increase.

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -2673,6 +2673,7 @@ Desired example
         </tr>
         {{/dark}}
 
+        {{#modified_crit}}
         {{#rollLess() crit_value crit_cutoff}}
         <tr style="background:#702082; color:#FFFFFF">
             <td class="template_label">Crit Roll:</td>
@@ -2686,6 +2687,7 @@ Desired example
             <td class="template_value">{{modified_crit}}</td>
         </tr>
         {{/^rollLess() crit_value crit_cutoff}}
+        {{/modified_crit}}
 
         {{#effects}}
         <tr style="background:#FFFFFF; color:#000000;">
