Add assertions on parameters not being null
And fix auto attacks with items

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -41,7 +41,7 @@
 
     <div class="sheet-core-header sheet-padb">
         <div class="sheet-row">
-            <div class="sheet-col-1-2 sheet-margin-top"><img src="http://i.imgur.com/Y8KHPKm.png" alt="Barbs"></div>
+            <div class="sheet-col-1-2 sheet-margin-top"><img src="https://i.imgur.com/6m8DpgS.png" alt="Barbs"></div>
             <div class="sheet-col-1-4 sheet-small-label sheet-center">
                 <input class="sheet-underlined sheet-center" type="text" name="attr_character_name">
                 <br/>Character Name
@@ -835,7 +835,7 @@
                         <input type="text" name="attr_main_hand" value=""/>
                     </div>
                     <div class="sheet-col-1-24">
-                        <button class="sheet-skill-roll" type="roll" name="roll_item" value="!barbs item @{attr_main_hand};@{attr_main_hand_options}"></button>
+                        <button class="sheet-skill-roll" type="roll" name="roll_item" value="!barbs item @{main_hand};@{main_hand_options}"></button>
                     </div>
                 </div>
 
@@ -856,7 +856,7 @@
                         <input type="text" name="attr_offhand" value=""/>
                     </div>
                     <div class="sheet-col-1-24">
-                        <button class="sheet-skill-roll" type="roll" name="roll_item" value="!barbs item @{attr_offhand};@{attr_offhand_options}"></button>
+                        <button class="sheet-skill-roll" type="roll" name="roll_item" value="!barbs item @{offhand};@{offhand_options}"></button>
                     </div>
                 </div>
 
