--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -76,7 +76,7 @@
 
         <!-- Characteristics Sheet -->
         <div class="sheet-section-characteristics">
-            <h4 class="sheet-center">Appearance, Languages and Alignment <span class="sheet-pictos">U</span></h4>
+            <h4 class="sheet-center">Appearance, Languages and Alignment</h4>
             <div class="sheet-row">
                 <div class="sheet-col-1-6 sheet-small-label sheet-center">
                     <input class="sheet-underlined sheet-center" type="text" name="attr_gender">
@@ -164,38 +164,35 @@
                 </div>
 
                 <!-- right column -->
-                <div class="sheet-col-1-2 sheet-padr">
-                    <h4 class="sheet-center">Initiative<span class="sheet-pictos">t</span></h4>
-                    <div class="sheet-row">
-                        <div class="sheet-row sheet-padr">
-                            <button type="roll" class="sheet-initiative sheet-large-button sheet-padb" name="roll_Initiative" value="&{template:5eDefault} {{title=Initiative}} {{subheader=@{character_name}}} {{rollname=Initiative}} {{roll=[[ 1d100 + @{AGI} &{tracker} ]]}}">Initiative</button>
-                        </div>
+                <div class="sheet-col-1-2">
+                    <h4 class="sheet-center">General</h4>
+                    <div class="sheet-row sheet-padb">
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Initiative" value="&{template:5eDefault} {{title=Initiative}} {{subheader=@{character_name}}} {{rollname=Initiative}} {{roll=[[1d100+@{AGI} &{tracker}]]}}">Initiative</button>
+
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Concentration" value="!barbs concentration">Concentration</button>
+
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Death_Save" value="&{template:5eDefault}  {{title=Death Save}} {{subheader=@{character_name}}} {{rollname=Death save}} {{roll=[[1d100]]}}">Death Save</button>
                     </div>
 
-                    <h4 class="sheet-center">Level and Combat Experience<span class="sheet-pictos-three">d</span></h4>
+                    <h4 class="sheet-center">Level and Combat Experience</h4>
                     <div class="sheet-row">
-                        <div class="sheet-col-1-4 sheet-small-label sheet-center" title="This is automatically calculated from your individual class levels listed in the class section">
+                        <div class="sheet-col-1-3 sheet-small-label sheet-center" title="This is automatically calculated from your individual class levels listed in the class section">
                             <input class="sheet-underlined" type="number" name="attr_level" value="@{hidden_level}" disabled="disabled">
                             <input type="hidden" name="attr_hidden_level" value="200+@{VIT}+@{END}+@{SPT}+@{RCV}+@{PER}+@{SAN}+@{AGI}+@{TGH}+@{REF}+@{RES}+@{FRT}+@{STR}+@{DEX}+@{ATN}+@{PRE}+@{APL}+@{INT}+@{WIS}+@{COM}+@{FCS}"/>
                             <br/>Overall Level
                         </div>
-                        <div class="sheet-col-1-4 sheet-small-label sheet-center">
+
+                        <div class="sheet-col-1-3 sheet-small-label sheet-center">
                             <input class="sheet-underlined" type="number" name="attr_xp" min="0" max="100" step="1">
                             <br/>Current Combat XP
                         </div>
-                        <div class="sheet-col-1-4 sheet-small-label sheet-center">
+
+                        <div class="sheet-col-1-3 sheet-small-label sheet-center">
                             <input class="sheet-underlined" type="number" name="attr_xp_next_level" value="100" disabled="disabled">
                             <br/>XP for next level
                         </div>
-                        <div class="sheet-col-1-4 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
-                    <h4 class="sheet-center">Death Saving Throw</h4>
-                    <div class="sheet-row">
-                        <div class="sheet-row sheet-padr">
-                            <button type="roll" class="sheet-initiative sheet-large-button" name="roll_Initiative" value="&{template:5eDefault}  {{title=Death Save}} {{subheader=@{character_name}}} {{rollname=Death save}} {{roll=[[ 1d100 ]]}}">Death Saving Throw</button>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -2589,8 +2586,8 @@
 <!--
 Desired example
 
-&{template:Barbs}
-{{name=Piercing Shot}} {{physical=[[d100]]}} {{fire=[[d100]]}} {{water=[[d100]]}} {{earth=[[d100]]}} {{air=[[d100]]}} {{ice=[[d100]]}} {{lightning=[[d100]]}} {{light=[[d100]]}} {{dark=[[d100]]}}
+&{template:Barbs} {{name=Piercing Shot}}
+{{physical=[[d100]]}} {{fire=[[d100]]}} {{water=[[d100]]}} {{earth=[[d100]]}} {{air=[[d100]]}} {{ice=[[d100]]}} {{lightning=[[d100]]}} {{light=[[d100]]}} {{dark=[[d100]]}} {{healing=[[d100]]}}
 {{crit_value=[[40]]}} {{crit_cutoff=[[50]]}}
 {{effects="something cool"}}
 -->
@@ -2609,6 +2606,7 @@ Desired example
           Lightning - gold
           Light - white
           Dark - black
+          Healing - pink
         -->
 
         {{#physical}}
@@ -2673,6 +2671,13 @@ Desired example
             <td class="template_value">{{dark}}</td>
         </tr>
         {{/dark}}
+
+        {{#healing}}
+        <tr style="background:#FFB5E6;">
+            <td class="template_label">Healing:</td>
+            <td class="template_value">{{healing}}</td>
+        </tr>
+        {{/healing}}
 
         {{#modified_crit}}
         {{#rollLess() crit_value crit_cutoff}}
