--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -41,7 +41,7 @@
 
     <div class="sheet-core-header sheet-padb">
         <div class="sheet-row">
-            <div class="sheet-col-1-2 sheet-margin-top"><img src="https://i.imgur.com/6m8DpgS.png" alt="Barbs"></div>
+            <div class="sheet-col-1-2 sheet-margin-top"><img src="https://i.imgur.com/9u8XLg7.png" alt="Barbs"></div>
             <div class="sheet-col-1-4 sheet-small-label sheet-center">
                 <input class="sheet-underlined sheet-center" type="text" name="attr_character_name">
                 <br/>Character Name
